--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "@types/yup": "^0.29.8",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
+  },
+  "engines": {
+    "node": "16.13.1"
   }
 }
