--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "typescript": "^4.0.3"
   },
   "engines": {
-    "node": "16.13.1"
+    "node": "16.13.1",
+    "yarn": "1.22.18",
+    "npm": "8.1.2"
   }
 }
